<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:onClick="backGroundOnClick"
        >

<!--        Sign Up Page Background-->

        <ImageView
            android:id="@+id/main_activity_background_image"
            android:layout_width="0dp"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background" />

        <TextView
            android:id="@+id/main_activity_background_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="44dp"
            android:text="@string/sign_up_page"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/main_activity_background_image"
            app:layout_constraintStart_toStartOf="parent" />

<!--     Name Text Input-->
        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@drawable/ic_outline_person" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_icon"
            app:layout_constraintTop_toBottomOf="@+id/main_activity_background_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


<!--        Phone Number Input-->
        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/username_icon"
            app:layout_constraintTop_toTopOf="@+id/email_Layout"
            app:srcCompat="@drawable/ic_phone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_icon"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


<!--       Email Input -->
        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/phone_icon"
            app:layout_constraintTop_toTopOf="@+id/emailInputLayout"
            app:srcCompat="@drawable/ic_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_icon"
            app:layout_constraintTop_toBottomOf="@+id/email_Layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


<!--        Gender Select -->
        <ImageView
            android:id="@+id/gender_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/email_icon"
            app:layout_constraintTop_toTopOf="@+id/gender_select"
            app:srcCompat="@drawable/ic_outline_people_24" />

        <Spinner
            android:id="@+id/gender_select"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:entries="@array/gender_array"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gender_icon"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

<!--     Terms and Condition CheckBox -->
        <CheckBox
            android:id="@+id/terms_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@+id/gender_icon"
            app:layout_constraintTop_toBottomOf="@+id/gender_icon" />

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/terms_conditions"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/terms_check_box"
            app:layout_constraintTop_toTopOf="@+id/terms_check_box" />


<!--     Sign up Button-->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#00A79B"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_check_box" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>